# Experiments

./: .gitignore  Makefile  README.md  hello_image.f90  omp.f90  pgi_cublas.f90  routine.F90  speedup.F90
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: image-editor-pages.yml
Notes/: linux.md  mac.md  uv.md  voiceink.md
client_tools/image-editor/: .eslintrc.cjs  Makefile  README.md  index.html  package-lock.json  package.json  plan.md  playwright.config.ts  tailwind.config.cjs  tsconfig.json  vite.config.ts
conf/: .gitignore  .zshrc  Makefile  tmux.conf  vimrc  vscode_workspace_settings.json  zshrc
conf/.claude/: settings.local.json
conf/.devcontainer/: README.md  devcontainer.json  setup.sh
conf/claude/: README.md
conf/gemini/: README.md
conf/gh-pages/: setup.md
conf/ghostty/: README.md  config
conf/lazygit/: README.md  config.yml
conf/mac_setup/: README.md
conf/nvim/: README.md  REFERENCE.md  init.lua  lazy-lock.json
conf/tmux/: .tmux.conf  README.md
conf/zed/: README.md  keymap.json  settings.json  settins.json  tasks.json
conf/zsh/: .zshrc  README.md  mac.zshrc  ubuntu.zshrc
cpp/HackerRank/: binary.cpp  calc.cpp  exception.cpp  interface.cpp  linked_list.cpp  maxDiff.cpp  queue_stack.cpp  scores.cpp
cpp/Shocking/: Makefile  console.h  euler.h  mesh.h  util.h  weno.cpp
cpp/cart_tree/: cart_tree.cpp
cpp/mfem/: ldc.cpp  t1.cpp  t3.cpp  t4.cpp
fortran/: .wave.f90.swp
fortran/CNS/: weno_2d.f03
fortran/OpenACC/: .gcc6.sh  coarray.F90  demo.F90  derived_type.f90  file.make  omp.f90  rungcc6.sh  speedup.F90  test.F90
fortran/fr/: Makefile  main.f90  modules.f90
fortran/fr_euler/: Makefile  fr.f90  main.f90  modules.f90  types.f90
fortran/wave/: Makefile  fr.f90  main.f90  modules.f90  plot_wave.py  polynomial.f90  types.f90  wave.f90  wave.mod
fortran_python/: .f2py_f2cmap  hello.f90
julia/: adv.jl  adv2D.jl  eul.jl
julia/dg/: mesh.jl  poly.jl  wave.jl
julia/icon/: adv.jl
llm/langgraph-demo/: README.md  cli.py  main.py  pyproject.toml
llm/langgraph-demo/.cursor/rules/: python.mdc
llm/langgraph-demo/ui/: main.py
postgres/: Dockerfile  Makefile  README.md  docker-compose.yaml  linter.sh  pyproject.toml
postgres/pgadmin/: docker-compose.yaml
postgres/src/: app.py  config.py  db.py  main.py  middleware.py  model.py
postgres/src/todo/: model.py  routes.py
python/: 1d.py  navierstokes.py  ns.py  tdm.py
python/MMS/: navierstokes.py  ns1d.py
python/browser-use/: .gitignore  main.py  pyproject.toml
python/cartopy/: msh.py
python/cloudtrail/: README.md  cloudtrail.ipynb  pyproject.toml
python/datev-download/: .env.example  .gitignore  README.md  pyproject.toml
python/datev-download/src/: datev_playwright.py
python/learn/: pla.py
python/levels/: lev.py
python/llama/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
python/llama/src/: app.py  config.py
python/llama/src/llama/: llama.py  routes.py
python/lora/: .gitignore  AGENTS.md  Makefile  README.md  data_loader.py  evaluation.py  fine-tune.md  hypothesis.md  justfile  main.py  model_utils.py  plan.md  pyproject.toml  refactor.md  research_plan.md  split_synthetic_only.py  train_real_small.py  training_config.py  tuning_plan.md  voice.md
python/lora/.agents/skills/agent-execution/: SKILL.md
python/lora/.agents/skills/gemini-cli-execution/: SKILL.md
python/lora/.gemini/: settings.json
python/lora/data/: coding_prompts.toml  my_voice_all.jsonl
python/lora/docs/: archive_legacy_results.md  experiment_plan.md  inference.md  known_issues.md  moonshine.md  personalized_training.md  training.md  training_report.md  tts.md  voice_ux.md
python/lora/docs/personalized/: exp_04_vocabulary_generalization.md  prompts.txt  tooling.md  training.md
python/lora/scripts/: build_domain_manifest.py  build_manifest.py  generate_v5_db.py  generate_v5_pipeline.py  manifest_diagnostics.py  merge_manifests.py  run_stt.py  run_stt_baseline.py  verify_tts.py
python/lora/src/db/: __init__.py  client.py  models.py
python/lora/src/lora/: __init__.py  data_loader.py  evaluation.py  logging_utils.py  manifest_diagnostics.py  model_utils.py  training_config.py
python/lora/src/lora/runners/: experiment.py  poc.py  real_small.py
python/lora/src/lora/scripts/: __init__.py  build_manifest.py  run_stt.py
python/lora/src/lora_data/: __init__.py  _dataset_splitter.py  _db_dataset_manager.py  _jargon_prompt_generator.py  _migrate_raw_to_db.py  _tts_engine.py  correction_recorder.py  data_loader.py  generate_synthetic_data.py  manifest_builder.py  manifest_diagnostics.py  manifest_utils.py  player.py  prompt_sanitizer.py  recorder.py
python/lora/src/lora_training/: __init__.py  evaluation.py  logging_utils.py  manifest_diagnostics.py  model_utils.py  transcribe.py
python/lora/src/lora_training/runners/: __init__.py  experiment.py  real_small.py
python/lora/src/ui/: __init__.py  core.py  main.py
python/lora/src/ui/components/: dataset.py  experiment.py  layout.py
python/lora/src/ui/routes/: dashboard.py  datasets.py  experiments.py  generate.py  record.py  train.py
python/lora/tests/: conftest.py  test_correction_recorder.py  test_data_loader.py  test_db.py  test_evaluation.py  test_experiment.py  test_recorder.py  test_run_stt.py  test_transcribe.py
python/lora/tests/db/: test_db.py
python/lora/tests/lora_data/: test_dataset_manager.py  test_jargon_prompt_generator.py
python/lora/tests/ui/: conftest.py  test_dashboard.py  test_datasets.py  test_generate.py  test_record.py  test_train.py
python/tree/: bst.py  sqTraverse.py
python/triangle/: tri.py
tasks/june/: Makefile  ToDo.md  mypy.ini  pyproject.toml
tasks/june/src/: tic_tac_toe.py
tasks/june/test/: test_tic_tac_toe.py
tauri/: ToDo.md
tauri/electron/: .gitignore  Justfile  README.md  eslint.config.mjs  forge.config.ts  launcher.html  (+13 more)
temp/: test_sample.xlsx
typescript/: CLAUDE.md
uv_tools/pdfi/: Makefile  README.md  pyproject.toml
uv_tools/pdfi/src/pdfi/: cli.py  pdf_ops.py
uv_tools/pdfi/tests/: test_pdf_tool.py
(+210 files in other folders)
