[tool.poetry]
name = "postgres"
version = "0.1.0"
description = ""
authors = ["Vikram <vikramsingh001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.18"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.4.1"
pytest = "^7.4.0"

[tool.isort]
profile = "black"
py_version = 38

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
