[project]
name = "datev-download"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "fsspec>=2024.10.0",
    "playwright>=1.49.0",
    "pydantic>=2.10.1",
    "pydantic-settings>=2.6.1",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
implicit_reexport = true
pretty = true
show_column_numbers = true
show_error_context = true
warn_unreachable = true

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "RUF", # ruff-specific-rules
    "BLE", # Blind except 
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
