[tool.poetry]
name = "llama"
version = "0.1.0"
description = ""
authors = ["Vikram <vikramsingh001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
loguru = "^0.7.0"
llama-cpp-python = "^0.1.77"
langchain = "^0.0.240"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.3.0"
black = "^23.3.0"
pytest = "^7.3.1"
isort = "^5.12.0"

[tool.isort]
profile = "black"
py_version = 38

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
