[tool.poetry]
name = "june"
version = "0.1.0"
description = ""
authors = ["Vikram <vikramsingh001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
numpy = "^1.24.3"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
